Make it build in CLI

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,9 @@ android {
     dexOptions {
         javaMaxHeapSize "4g"
     }
+    lintOptions {
+        warning 'InvalidPackage'
+    }
 }
 
 dependencies {
